# eot-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
eot/: Cargo.toml
eot/src/: core.rs  lib.rs  metadata.rs  stream.rs  triplet_encodings.rs
eot/src/ctf/: ctf_parse.rs  sfnt_container.rs  ttf_parse.rs
eot/src/lzcomp/: ahuff.rs  bitio.rs  mod.rs
eot/tests/: equality.rs
eot_parse/: Cargo.toml
eot_parse/src/: core.rs
eot_parse/src/ctf/: ttf_parse.rs
eot_parse/src/lzcomp/: mod.rs
eot_parse/tests/: equality.rs
eot_test/: Cargo.toml  build.rs
eot_test/tests/: metadata.rs
legacy/: README.md
rust/: Cargo.toml  lib.rs
rust/eot/: Cargo.toml
rust/eot/src/: EOT.rs  core.rs  lib.rs  libeot.rs  metadata.rs  stream.rs  triplet_encodings.rs  writeFontFile.rs
rust/eot/src/ctf/: SFNTContainer.rs  parseCTF.rs  parseTTF.rs  sfnt_container.rs
rust/eot/src/lzcomp/: ahuff.rs  bitio.rs  liblzcomp.rs  lzcomp.rs  mod.rs  mtxmem.rs
rust/eot/src/util/: stream2.rs
rust/eot/tests/: equality.rs
rust/eot_test/: Cargo.toml  build.rs
rust/eot_test/tests/: metadata.rs
rust/src/: EOT.rs  core.rs  eot2ttf.rs  libeot.rs  triplet_encodings.rs  writeFontFile.rs
rust/src/ctf/: SFNTContainer.rs  parseCTF.rs
rust/src/lzcomp/: ahuff.rs  bitio.rs  liblzcomp.rs  lzcomp.rs
rust/src/util/: stream.rs
rust/tests/: equality.rs
