[package]
name = "eot-parse"
description = "Parser for the Embeddable OpenType font format."
license = "MPL-2.0"
authors = ["Kiëd Llaentenn <kiedtl@tilde.team>", "Brennan T. Vincent <brennanv@email.arizona.edu>"]
repository = "https://github.com/kiedtl/eot-rs"
documentation = "https://docs.rs/eot-parse"
version = "1.0.3"
edition = "2024"
autobins = false
publish = true

[lib]
name = "eot_parse"
crate-type = ["staticlib", "rlib"]

[dependencies]
byteorder = "1.5.0"
