[workspace]
members = [
]
[package]
name = "rust"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2021"
autobins = false

[lib]
name = "rust"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]
[dependencies]
c2rust-bitfields = "0.22.1"

[dev-dependencies]
ttf-parser = "0.20"
tempfile = "3.27"
